# Train-in-Silence

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml
docs/: README.md
docs/en/: api.md  architecture.md  cli.md  index.md  integrations.md  mcp.md  providers.md  testing.md
docs/zh/: api.md  architecture.md  cli.md  index.md  integrations.md  mcp.md  providers.md  testing.md
examples/: request.yaml
scripts/: create_aws_cassette.py  debug_aws_provider.py  refresh_catalogs.py
tests/: conftest.py  test_api.py  test_cli.py  test_estimator.py  test_gpufinder.py  test_gpuhunt.py  test_market.py  test_mcp.py  test_networking.py  test_optimizer.py  test_recommender.py
tests/cassettes/test_networking/: test_aws_public_price_list_fetch.yaml  test_gpufinder_live_fetch.yaml  test_runpod_live_fetch.yaml  test_vast_ai_live_fetch.yaml
tis/api/: server.py
tis/cli/: main.py
tis/data/: aws_gpu_instances.json  gpu_offers.json  gpu_specs.json
tis/planner/: __init__.py  estimator.py  models.py  optimizer.py  pareto.py  recommender.py  workload.py
tis/planner/market/: __init__.py  base.py  cache.py  catalog.py  http.py  providers.py  service.py
tis/plugins/: __init__.py  mcp_server.py
